Fix for issue 99, fix for event page image stretching.

--- a/public/styles/components/4_pages.scss
+++ b/public/styles/components/4_pages.scss
@@ -916,11 +916,6 @@ body .talks-item {
 	}
 
 }
-.event-photo {
-	@media(max-width: 767px) {
-		height: 400px;
-	}
-}
 
 .featured-event p {
 	@media (max-width: 767px){
